--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 altgraph==0.17.4
-packaging==23.2
-pyinstaller==6.0.0
-pyinstaller-hooks-contrib==2023.9
-PyQt6==6.5.2
-PyQt6-Qt6==6.5.2
-PyQt6-sip==13.5.2
+packaging==24.1
+pyinstaller==6.8.0
+pyinstaller-hooks-contrib==2024.7
+PyQt6==6.7.0
+PyQt6-Qt6==6.7.2
+PyQt6-sip==13.6.0
+setuptools==70.1.1
